--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lwip": "0.0.6",
     "mkdirp": "^0.5.0",
+    "moment": "^2.9.0",
     "qn": "^1.0.1"
   }
 }
